objects/CampaignMember.object
<CustomObject>
    <fields>
        <fullName>Activity_Days__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Duration of activity (days)</description>
        <inlineHelpText>How many days does the activity last through?</inlineHelpText>
        <label>Activity Days</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Additional_Invitees__c</fullName>
        <defaultValue>0</defaultValue>
        <description>The number of people the campaign member is bringing (people coming along but not entered as contacts)</description>
        <inlineHelpText>Enter the number of people coming with this contact. This only includes people who are not contacts in our database. This number helps for headcounts in campaign.</inlineHelpText>
        <label>Additional Invitees</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Attended__c</fullName>
        <description>It is true if the campaign member&apos;s status is Attended or Staff</description>
        <formula>OR( ISPICKVAL(Status,&apos;Attended&apos;),ISPICKVAL(Status,&apos;Staff&apos;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Attended</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CampaignDate__c</fullName>
        <description>Campaign Start Date</description>
        <formula>Campaign.StartDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CampaignDate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CampaignName__c</fullName>
        <formula>Campaign.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CampaignName</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CnP_PaaS__CnP_Campaign_Lift_URL_Autocomplete__c</fullName>
        <label>C&amp;P Campaign Lift URL Autocomplete</label>
        <length>16384</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CnP_PaaS__CnP_Campaign_Lift_URL__c</fullName>
        <label>C&amp;P Campaign Lift URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>CnP_PaaS__CnP_Increment__c</fullName>
        <label>C&amp;P Increment</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CnP_PaaS__CnP_Lift_Expiration_date__c</fullName>
        <label>C&amp;P Lift Expiration date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CnP_PaaS__CnP_Lift_Last_Updated__c</fullName>
        <label>C&amp;P Lift Last Updated</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CnP_PaaS__CnP_Start_Value__c</fullName>
        <label>C&amp;P Start Value</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Emergency_Contact__c</fullName>
        <formula>Contact.Emergency_Contact_Name__c  &amp; &quot; &quot;  &amp; Contact.Emergency_Phone__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Emergency Contact</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Party_of__c</fullName>
        <description>Total attending, including the contact. This field only counts people that are Signed Up or have already Attended an Adventure.</description>
        <formula>IF( 
 OR ( 
   OR( ISPICKVAL (Status, &quot;Attended&quot;), ISPICKVAL (Status, &quot;Signed Up&quot;)),
       ISPICKVAL (Status, &quot;Staff&quot;)), 
   Additional_Invitees__c + 1, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>This number is automatically calculated, based on the status of the Campaign Members.</inlineHelpText>
        <label>Party of</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Staff__c</fullName>
        <description>This field is true when the Campaign Member Status is Staff.</description>
        <formula>ISPICKVAL(Status,&apos;Staff&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Staff</label>
        <type>Checkbox</type>
    </fields>
    <sharingModel>ControlledByCampaign</sharingModel>
</CustomObject>